Add the kernel file

--- a/Chat-4/Makefile
+++ b/Chat-4/Makefile
@@ -3,8 +3,16 @@ main:
 	gcc -o signalactiontest signalactiontest.c
 	gcc -o settimertest settimertest.c
 	gcc -o alarmtest alarmtest.c
+	gcc -o siginttest siginttest.c
+	gcc -o pipetest pipetest.c
+	gcc -o fifotest1 fifotest1.c
+	gcc -o fifotest2 fifotest2.c
 clean:
 	rm signaltest
 	rm signalactiontest
 	rm settimertest
 	rm alarmtest
+	rm siginttest
+	rm pipetest
+	rm fifotest1
+	rm fifotest2
